--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,10 @@
 *.tar.gz
 *.rar
 
+# Project
+.idea/
+*.iml
+target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
